--- a/templates/show_entries.html
+++ b/templates/show_entries.html
@@ -17,7 +17,12 @@
 			<h2>
 				{{ entry.title }}
 			</h2>
-			{{ entry.text|safe }}
+			{{ entry.text|safe }}<br><p>Tags:
+			{% for tag in tags %}
+				{% if tag.entry == entry.id%}
+					{{tag.name}},
+				{% endif %}
+			{% endfor %}
 		</li> 
 
 		{% if session.logged_in %}
@@ -33,8 +38,14 @@
 			<input type=submit value="Edit">
 			</form>
 
-		{% endif %}
+			<!-- Add tags -->
+			<form action="{{ url_for('add_tag') }}" method="POST">
+			<input type=hidden name=entry value={{entry.id}}>
+			<input type=text name=name>
+			<input type=submit value="Add Tag">
+			</form>
 
+		{% endif %}
 	{% else %}
 		<li><em>No entries thus far.</em></li>
 	
