--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,6 +4,7 @@
 		<link rel="stylesheet" type=text/css href="{{ url_for('static', filename="style.css")}}">
 	</head>
 	<body>
+	<p>Stylesheet swapper--javascript</p>
 		<h1>Indian Jaunt 2016</h1>
 
 		<div class = metanav>
