--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,7 +5,7 @@
 	</head>
 	<body>
 	<p>Stylesheet swapper--javascript</p>
-		<h1>Indian Jaunt 2016</h1>
+		<a href="{{url_for('show_entries')}}"><h1>Indian Jaunt 2016</h1></a>
 
 		<div class = metanav>
 			{% if not session.logged_in %}
