--- a/templates/entry.html
+++ b/templates/entry.html
@@ -1,42 +1,23 @@
 {% extends "layout.html" %}
 {% block body%}
 	<div class=entry>
-		<p>Entry number {{ entry.id }}</p>
+		<p>Entry number {{ entry }}</p>
 		<div class=text>
-			<h1>{{entry.title}}</h1>
-			<p>{{entry.text}}</p>
+			<a href="{{i}}"><h1>{{title}}</h1></a>
+			{{body|safe}}
 		</div><p>Tags:
 		{% for tag in tags %}
-			{% if tag.entry == entry.id%}
-				{{tag.name}}
-			{% endif %}
+			{{tag}}
 		{% endfor %}
 	</div>
 {% if session.logged_in %}
-	<!-- Delete button -->
-	<form action="{{ url_for('delete')}}" method="POST">
-	<input type=hidden name=id value={{entry.id}}>
-	<input type=submit value="Delete">
-	</form>
 
-	<!-- Edit button -->
-	<form action="{{ url_for('edit') }}" method="POST">
-	<input type=hidden name='id' value={{entry.id}}>
-	<input type=submit value="Edit">
-	</form>
-
-	<!-- Add tags -->
-	<form action="{{ url_for('add_tag') }}" method="POST">
-	<input type=hidden name=entry value={{entry.id}}>
-	<input type=text name=name value={% for tag in tags %}{% if tag.entry == entry.id%}{{tag.name}},{% endif %}{% endfor %}>
-	<input type=submit value="Add Tag">
-	</form>
 {% endif %}
 <!-- Adding a comment -->
 	<div class=comment>
 	<dl>
 	{% for comment in comments %}
-		{% if entry.id == comment.entry %}
+		{% if entry == comment.entry %}
 			<dt>Name:
 			<dd>{{comment.name}}<br>
 			<dd>{{comment.comment}}
@@ -56,7 +37,7 @@
 		<dd><input type=text name=name>
 		<dt>Comment:
 		<dd><textarea name=comment rows=5 cols=40></textarea>
-		<input type=hidden name=entry value={{entry.id}}><br>
+		<input type=hidden name=entry value={{entry}}><br>
 		<input type=submit value="Submit Comment">
 	</form>
 	</dl>
