--- a/templates/show_entries.html
+++ b/templates/show_entries.html
@@ -4,7 +4,7 @@
 	{% for i in entries %}
 		<li>
 			<h2>
-				{{ titles[i] }}
+				<a href="entry/{{i}}">{{ titles[i] }}</a>
 			</h2>
 			{{ bodies[i]|safe }}<br><p>Tags:
 			{% for each in taglist[i] %}
