--- a/static/style.css
+++ b/static/style.css
@@ -1,21 +1,52 @@
-body            { font-family: sans-serif; background: #eee; }
-a, h1, h2       { color: #377ba8; }
-h1, h2          { font-family: 'Georgia', serif; margin: 0; }
-h1              { border-bottom: 2px solid #eee; }
-h2              { font-size: 1.2em; }
+body { 
+	font-family: sans-serif; 
+	background: #dddddd; 
+}
 
-.page           { margin: 2em auto; width: 35em; border: 5px solid #ccc;
-                  padding: 0.8em; background: white; }
-.entries        { list-style: none; margin: 0; padding: 0; }
-.entries li     { margin: 0.8em 1.2em; }
-.entries li h2  { margin-left: -1em; }
-.add-entry      { font-size: 0.9em; border-bottom: 1px solid #ccc; }
-.add-entry dl   { font-weight: bold; }
-.metanav        { text-align: right; font-size: 0.8em; padding: 0.3em;
-                  margin-bottom: 1em; background: #fafafa; }
-.flash          { background: #cee5F5; padding: 0.5em;
-                  border: 1px solid #aacbe2; }
-.error          { background: #f0d6d6; padding: 0.5em; }
+a { 
+	color: #377ba8; 
+	text-decoration: none; 
+}
+
+h1 { 
+	font-family: 'Georgia', serif; 
+}
+
+
+div.entries { 
+	width: 90%;
+	padding-left: 10px;
+	padding-top: 2px;
+	padding-bottom: 5px;
+	margin-top: 5px;
+	background-color: #bbbbbb;
+	border-radius: 10px;
+}
+
+
+p.num {
+	font-style: italic;
+	font-size: .9em;
+}
+
+div.body {
+	background-color: #aaaaaa ;
+	padding-left: 5px;
+	width: 90%;
+	border-radius: 5px;
+}
+
+
+div.rightnav { 
+	float: right;
+	margin-top: 10px;
+}
+
+div.flash { 
+	background: #cee5F5; 
+	padding: 0.5em;
+    border: 1px solid #aacbe2; 
+}
 
 
 div.map {
