--- a/templates/layout.html
+++ b/templates/layout.html
@@ -51,7 +51,6 @@
 			<div class="northcity" id="pune">
 			</div>
 		</div>
-		<div class="rest">
 		{% block body %}{% endblock %}
-		</div>
+	</body>
 </html>
